Finish QKD and thought of different implementation from different perspective.

--- a/MainWabinab.ipynb
+++ b/MainWabinab.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "alternative-carolina",
+   "id": "little-employer",
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "damaged-trial",
+   "id": "million-royal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "noticed-uruguay",
+   "id": "incoming-architecture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "specific-cyprus",
+   "id": "protecting-doubt",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "packed-chinese",
+   "id": "peripheral-moses",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "valid-belle",
+   "id": "fifth-appliance",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "grateful-trunk",
+   "id": "controlling-bristol",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boolean-challenge",
+   "id": "quick-milton",
    "metadata": {},
    "source": [
     "**Let's try to generate gates randomly**"
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "enclosed-surfing",
+   "id": "noted-organizer",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "another-significance",
+   "id": "suburban-bradford",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "casual-smell",
+   "id": "backed-pizza",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "renewable-grove",
+   "id": "expensive-badge",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "exact-arena",
+   "id": "martial-manual",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cosmetic-slovakia",
+   "id": "moved-paper",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aggregate-poultry",
+   "id": "crucial-citizenship",
    "metadata": {},
    "source": [
     "We get the same value as in our \"choice\". Note that to visualize constructive and destructive interference in quantum computing, it's very easy. Whenever we have a constructive interference at one place, we have destructive interference at other place. For a perfect quantum computer like above it's difficult to show the \"destructive\" effect at other place, but if we have a noise model, we could show that there is only one place where the probabilities are extremely high and other places where probabilities are low. Let's show that. "
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "broad-prairie",
+   "id": "prerequisite-scheme",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "wanted-criminal",
+   "id": "gothic-third",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "significant-feedback",
+   "id": "mighty-selection",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fatal-photographer",
+   "id": "reasonable-lighting",
    "metadata": {},
    "source": [
     "### What if we have interference? That is, what if we have some extra CNOT gates that comes from nowhere? Let's try to build that. \n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "excessive-edinburgh",
+   "id": "prime-dallas",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "elder-enhancement",
+   "id": "derived-lingerie",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "protected-begin",
+   "id": "reasonable-malawi",
    "metadata": {},
    "source": [
     "With the same circuit repeated we see that the CNOT get interferes the result via global phase change and the result now interferes destructively at `00011` and instead constructively interfere at `00000`."
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "economic-argentina",
+   "id": "confidential-bulgaria",
    "metadata": {},
    "source": [
     "Up till now we have tried putting the \"target\" of a CNOT gate at the ancilla qubit, but what if we have CNOT gates target that is not part of the ancilla? Let's try doing that. "
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "public-postage",
+   "id": "creative-grant",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "collectible-kazakhstan",
+   "id": "western-ultimate",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "racial-expert",
+   "id": "optional-middle",
    "metadata": {},
    "source": [
     "Okay either the constructive interference is to some other number of do not change, so this is not very stable. Let's try something else. Let's try to add Rotation phase gates randomly. We would see these phase gates as \"disturbance\" just like water waves being disturbed. "
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "uniform-stanford",
+   "id": "processed-astrology",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "precious-crystal",
+   "id": "chicken-brighton",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nasty-flower",
+   "id": "worst-substitute",
    "metadata": {},
    "source": [
     "Ok now we see that except for the main, we actually have another constructive interference (albeit much more less than the main constructive wave). This is interesting. Let's see it with a perfect simulator to get a grasp of it if you don't believe. "
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "offensive-aircraft",
+   "id": "compliant-sponsorship",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "secondary-chamber",
+   "id": "compressed-manner",
    "metadata": {},
    "source": [
     "This means now we have 2 constructive wave and others are destructive at other regions not shown above.\n",
@@ -741,9 +741,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "disabled-greenhouse",
+   "metadata": {},
+   "source": [
+    "Related to the Quantum Key Distribution (QKD) virus file, I am thinking that whether these \"virus\" (or \"noise\", if that's in your preference) could make alterations in such a way that a string of bits being transmitted, when changed phase in the middle, are converted into a string of virus. All in all virus are just made of bits too, nothing different, so in the future perhaps there's some way that bad guy tries to inject virus without measurement necessary, who knows? "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "latter-immunology",
+   "id": "macro-phenomenon",
    "metadata": {},
    "outputs": [],
    "source": []
